datafusion/datafusion-cli/tests/snapshots/aws_options.snap
---
source: tests/cli_integration.rs
info:
  program: datafusion-cli
  args: []
  stdin: "CREATE EXTERNAL TABLE CARS\nSTORED AS CSV\nLOCATION 's3://data/cars.csv'\nOPTIONS(\n    'aws.access_key_id' 'TEST-DataFusionLogin',\n    'aws.secret_access_key' 'TEST-DataFusionPassword',\n    'aws.endpoint' 'http://127.0.0.1:9000',\n    'aws.allow_http' 'true'\n);\n\nSELECT * FROM CARS limit 1;\n"
---
success: true
exit_code: 0
----- stdout -----
[CLI_VERSION]
0 row(s) fetched. 
[ELAPSED]

+-----+-------+---------------------+
| car | speed | time                |
+-----+-------+---------------------+
| red | 20.0  | 1996-04-12T12:05:03 |
+-----+-------+---------------------+
1 row(s) fetched. 
[ELAPSED]

\q

----- stderr -----
