datafusion/datafusion-cli/tests/snapshots/cli_format@nd-json.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--command"
    - select 1
    - "-q"
    - "--format"
    - nd-json
---
success: true
exit_code: 0
----- stdout -----
{"Int64(1)":1}

----- stderr -----
