datafusion/datafusion-cli/tests/snapshots/cli_format@tsv.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--command"
    - select 1
    - "-q"
    - "--format"
    - tsv
---
success: true
exit_code: 0
----- stdout -----
Int64(1)
1

----- stderr -----
